added UART4 driver

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,8 +26,10 @@ add_compile_options(${ARM_FLAGS})
 add_compile_options(-Wall -Wextra)
 add_compile_options(-Wno-unused-parameter)
 add_compile_options(-fdata-sections -ffunction-sections)
-add_compile_options(-O2)
+add_compile_options(-O0)
 add_compile_options(-fsingle-precision-constant)
+add_compile_options(-pipe)
+add_compile_options(-flto)
 
 set(LDSPECS nano.specs)
 
@@ -35,7 +37,7 @@ set(CMAKE_EXECUTABLE_SUFFIX ".elf")
 
 string(REPLACE ";" " " ARM_LINK_FLAGS "${ARM_FLAGS}")
 
-set(LINK_FLAGS "${ARM_LINK_FLAGS} -specs=nosys.specs -Wl,--gc-sections -Wl,--undefined=uxTopUsedPriority,--undefined=freeRTOSMemoryScheme -Wl,-Map=${PROJECT_NAME}.map,--cref")
+set(LINK_FLAGS "${ARM_LINK_FLAGS} -v -specs=nosys.specs -Wl,--gc-sections -Wl,--undefined=uxTopUsedPriority,--undefined=freeRTOSMemoryScheme -Wl,-Map=${PROJECT_NAME}.map,--cref")
 
 set(CMAKE_EXE_LINKER_FLAGS "${LINK_FLAGS} -specs=${LDSPECS} -T${LDSCRIPT}")
 
